# AgenticAP

./: .dockerignore  .gitignore  .markdownlint.json  QUICKSTART.md  README.md  UPDATE_SCREENSHOTS.md  alembic.ini  docker-compose.yml  ocr_debug.txt  ocr_debug_2.txt  ocr_debug_final.txt  ocr_result_9.txt  paddle_meta.txt  probe_paddle_ocr.py  pyproject.toml
.antigravity/: rules.md
.cursor/rules/: specify-rules.mdc
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
alembic/: README  env.py
alembic/versions/: 001_initial_schema.py  8c2b9c709184_refactor_metadata_structure.py  abd6949925c7_add_multi_dataset_support_v2.py  b6e2a7c1f4b9_resilient_configuration_models.py  (+1 more)
brain/: __init__.py  extractor.py  schemas.py  validator.py
core/: __init__.py  config.py  configuration_models.py  configuration_service.py  configuration_validation.py  database.py  encryption.py  jobs.py  logging.py  models.py  module_registry.py  observability.py  queue.py
core/ocr/: __init__.py  (+5 more)
docs/: 002-dashboard-improvements.md  003-dataset-upload-ui-implementation.md  004-invoice-chatbot-implementation.md  005-ingestion-workflow-fixes.md  README.md  comparison-einvoicing-vs-edocuments.md  csv-implementation.md  duplicate-processing-logic.md  hf.md  implementation-scaffold.md  init-request.md  langgraph-langchain.md  multi-agents-2.md  multiple-datasets.md  nextjs-migration-plan-agenticap.md  nextjs_migration_plan.md  ocr-switch-options.md  process-images-3.md  query-strategy-analysis.md  recent-implementation-summary.md  request.md  resilient-configuration.md  setup-scaffold-1.md  sum.md  tech-stack.md  todo-langgraph.md  todo-rrf.md  todos.md
frontend/: next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
ingestion/: __init__.py  excel_processor.py  file_discovery.py  file_hasher.py  hf_loader.py  image_processor.py  orchestrator.py  pdf_processor.py
interface/: __init__.py
scripts/: README.md  check_failed_invoices.py  check_invoice_status.py  check_job.py  cleanup_data.py  cleanup_invoices.py  cleanup_vectors.py  debug_chatbot.py  debug_invoice.py  debug_ocr.py  diagnose_chatbot.py  dump_paddle_result.py  fix_hf_confidences.py  inspect_invoice.py  probe_paddle.py  process_all_invoices.py  process_grok_invoices.py  process_hf_gokulraja.py  process_hf_mychen76.py  process_hf_voxel51.py  process_invoices.py  reproduce_issue.py  reset_all_data.py  restart_api.sh  setup_queue.sh  start_safe_api.sh  test_db_connection.py  test_ocr_safe.py  verify_db.py  verify_docling.py
tests/: __init__.py  test_queue.py
(+167 files in other folders)
